# asteroids-3d

./: .gitignore  CMakeLists.txt  README.md  events.txt
Assets/JackieShip/: JackieShip.blend
Assets/PHMine/: PHMine.blend
Assets/PHPhaser/: PHPhaser.blend
Assets/PHShip/: PHShip.blend
Assets/Ruless/: Ruless.blend
Assets/TestBullet/: TestBullet.blend
Assets/TestPlanet/: TestPlanet.blend
Assets/TestShip/: TestShip.blend
Asteroids/: CMakeLists.txt
Asteroids/include/Asteroids/: ActionState.hpp  Asteroid.hpp  AsteroidsApplication.hpp  AsteroidsLib.hpp  Bullet.hpp  DebugTextScroll.hpp  DeviceInputMapper.hpp  Globals.hpp  InputActionMapper.hpp  OrbitingCameraController.hpp  Player.hpp  ShipController.hpp  SurfaceObject.hpp
Asteroids/include/Asteroids/Menu/: ConnectPrompt.hpp  HostServerPrompt.hpp  MainMenu.hpp  Menu.hpp  MenuEvents.hpp  MenuScreen.hpp
Asteroids/include/Asteroids/Network/: NetworkEvents.hpp  NetworkShipState.hpp  Protocol.hpp
Asteroids/include/Asteroids/Objects/: Asteroid.hpp  Bullet.hpp  BulletController.hpp  MineController.hpp  PhaserController.hpp  SurfaceObject.hpp
Asteroids/include/Asteroids/Player/: ActionState.hpp  ActionStateEvents.hpp  ClientLocalShipState.hpp  ClientRemoteShipState.hpp  ClientShipState.hpp  DeviceInputMapper.hpp  OrbitingCameraController.hpp  PayerEvents.hpp  PlayerEvents.hpp  ServerShipState.hpp  ShipController.hpp  WeaponSpawner.hpp
Asteroids/include/Asteroids/UserRegistry/: ClientUserRegistry.hpp  ServerUserRegistry.hpp  User.hpp  UserRegistry.hpp  UserRegistryEvents.hpp
Asteroids/include/Asteroids/Util/: DebugTextScroll.hpp  Process.hpp  UIUtils.hpp  UnidirectionalPipe.hpp
Asteroids/src/: ActionState.cpp  Asteroid.cpp  AsteroidsApplication.cpp  AsteroidsLib.cpp  Bullet.cpp  DebugTextScroll.cpp  DeviceInputMapper.cpp  InputActionMapper.cpp  OrbitingCameraController.cpp  Player.cpp  ShipController.cpp  SurfaceObject.cpp  main.cpp
Asteroids/src/Menu/: ConnectPrompt.cpp  HostServerPrompt.cpp  MainMenu.cpp  Menu.cpp  MenuScreen.cpp
Asteroids/src/Network/: NetworkShipState.cpp
Asteroids/src/Objects/: Asteroid.cpp  Bullet.cpp  BulletController.cpp  MineController.cpp  PhaserController.cpp  SurfaceObject.cpp
Asteroids/src/Player/: ActionState.cpp  ClientLocalShipState.cpp  ClientRemoteShipState.cpp  ClientShipState.cpp  DeviceInputMapper.cpp  OrbitingCameraController.cpp  ServerShipState.cpp  ShipController.cpp  WeaponSpawner.cpp
Asteroids/src/UserRegistry/: ClientUserRegistry.cpp  ServerUserRegistry.cpp  User.cpp  UserRegistry.cpp
Asteroids/src/Util/: DebugTextScroll.cpp  Process.cpp  UnidirectionalPipe.cpp
Asteroids/templates/: Config.hpp.in
Client/: CMakeLists.txt
Client/include/Client/: ClientApplication.hpp  LocalServer.hpp  Process.hpp
Client/src/: ClientApplication.cpp  LocalServer.cpp  Process.cpp  main.cpp
Editor/: CMakeLists.txt
Editor/include/Editor/: EditorApplication.hpp
Editor/src/: EditorApplication.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/Server/: ServerApplication.hpp  SignalHandler.hpp
Server/src/: ServerApplication.cpp  ServerApplication.hpp  SignalHandler.cpp  main.cpp
Server/src/platform/linux/: signals.c
Server/src/platform/not-implemented/: signals.c
doc/: object-list.txt
